fixup! Fix TLS problem loading font

--- a/se.css
+++ b/se.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Lato:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 
 html {
  font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
