--- a/se.css
+++ b/se.css
@@ -14,13 +14,30 @@ header {
  background-color: rgb(0,106,20);
 }
 
-article { width: 66%; margin: 0 2.6em; }
+header, body { padding: 0 2.6em }
+body { width: 66%; max-width: 800px; margin-bottom: 8em; }
 
-a { color: rgba(0,106,20,.8) }
+a {
+ color: rgb(120, 161, 108);
+ border-bottom: 2px solid rgba(120,161,108,.5);
+ text-decoration: none;
+}
+a:hover { color: rgb(69,134,84) }
 
 h1, h2, h3 {
  text-transform: uppercase;
- color: rgb(0,106,20);
+ color: rgb(69,134,84);
 }
+h1 { margin-top: 2em }
+h2 { margin-top: 2.6em }
+h3 { margin-top: 1.8em }
 
-pre { line-height: 120%; font-size: 90%; }
+pre {
+ border: 1px solid rgb(234,234,234);
+ border-radius: 3px;
+ line-height: 120%;
+ padding: .8em 1em;
+ white-space: pre-wrap;
+ word-wrap: break-word;
+}
+code { font-family: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace; font-size: 90%; }
