--- a/se.css
+++ b/se.css
@@ -21,7 +21,7 @@ body, header, footer > div { padding: 0 50px }
 body { padding-right: 40% }
 header, footer { margin: 0 -50px; width: 100%; position: absolute; }
 
-nav {
+nav#pagination {
  border-color: rgb(210,210,210);
  border-style: solid;
  border-width: 0;
@@ -33,10 +33,10 @@ nav {
  display: table;
  width: 100%;
 }
-nav a { border: 0; display: table-cell; width: 50%; padding: 1.2em 0 }
-nav .next { text-align: right }
-nav a.prev:link:before { content: "‹ " }
-nav a.next:link:after { content: " ›" }
+nav#pagination a { border: 0; display: table-cell; width: 50%; padding: 1.2em 0 }
+nav#pagination .next { text-align: right }
+nav#pagination a.prev:link:before { content: "‹ " }
+nav#pagination a.next:link:after { content: " ›" }
 
 footer {
  margin-top: 6em;
