--- a/se.css
+++ b/se.css
@@ -14,12 +14,35 @@ body {
 
 header {
  min-height: 100px;
- background-color: rgb(0,106,20);
+ background-color: rgb(69,134,84);
 }
 
 body, header, footer > div { padding: 0 50px }
 body { padding-right: 40% }
 header, footer { margin: 0 -50px; width: 100%; position: absolute; }
+
+nav#toc {
+ position: fixed;
+ width: 300px;
+ border: 1px solid rgb(69,134,84);
+ border-radius: 3px;
+ right: 100px;
+}
+nav#toc h1 {
+ margin: 0;
+ padding: 0;
+ font-size: 100%;
+ text-transform: none;
+ background-color: rgb(69,134,84);
+}
+nav#toc h1 a { color: rgb(234,234,234) }
+nav#toc h1, nav#toc a { border-bottom: 1px solid rgb(224,224,224) }
+nav#toc a {
+ display: block;
+ padding: .5em .8em;
+}
+nav#toc a { color: rgba(68,68,68,.8) }
+nav#toc a:last-child { border: 0 }
 
 nav#pagination {
  border-color: rgb(210,210,210);
@@ -66,6 +89,7 @@ a:hover { color: rgb(69,134,84) }
 h1, h2, h3 {
  text-transform: uppercase;
  color: rgb(69,134,84);
+ line-height: 120%;
 }
 h1 { margin-top: 2em }
 h2 { margin-top: 2.6em }
@@ -91,4 +115,5 @@ ul li ul li { margin-bottom: 0 }
 
 @media only screen and (max-width: 950px) {
  body { width: auto }
+ nav#toc { display: none }
 }
