Use same margin on ToC as for body

--- a/se.css
+++ b/se.css
@@ -27,7 +27,7 @@ nav#toc {
  width: 250px;
  border: 1px solid rgb(69,134,84);
  border-radius: 3px;
- margin-left: 1em;
+ margin-left: 50px;
  left: 60%;
 }
 nav#toc h1 {
