--- a/se.css
+++ b/se.css
@@ -90,11 +90,8 @@ a {
 }
 a:hover { color: rgb(69,134,84) }
 
-h1, h2, h3 {
- text-transform: uppercase;
- color: rgb(69,134,84);
- line-height: 120%;
-}
+h1, h2, h3 { color: rgb(69,134,84); line-height: 120%; }
+h1, h2 { text-transform: uppercase }
 h1 { margin-top: 2em }
 h2 { margin-top: 2.6em }
 h3 { margin-top: 1.8em }
