--- a/se.css
+++ b/se.css
@@ -96,6 +96,7 @@ h1 { margin-top: 2em }
 h2 { margin-top: 2.6em }
 h3 { margin-top: 1.8em }
 
+pre, code { font-family: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace; font-size: 90%; }
 pre {
  border: 1px solid rgb(234,234,234);
  border-radius: 3px;
@@ -104,7 +105,7 @@ pre {
  white-space: pre-wrap;
  word-wrap: break-word;
 }
-code { font-family: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace; font-size: 90%; }
+pre code { font-size: 100% }
 
 ul li { margin-bottom: .8em }
 ul li ul li { margin-bottom: 0 }
