--- a/se.css
+++ b/se.css
@@ -6,17 +6,17 @@ html {
  font-weight: 400;
  line-height: 24px;
 }
-
-body {
- margin: 0;
- color: rgba(68,68,68,.8);
-}
+body { margin: 0; color: rgba(68,68,68,.8); }
+body.front header h1 { padding: 100px 0 }
+body.front h1 { padding-top: 300px }
+body.front nav#toc { top: 300px }
 
 header {
  min-height: 100px;
  background-color: rgb(69,134,84);
  margin-bottom: 2em;
 }
+header h1 { padding: 50px 0; color: white; font-weight: normal; }
 
 body, header, footer > div { padding: 0 50px }
 body { padding-right: 40% }
@@ -30,21 +30,22 @@ nav#toc {
  border-radius: 3px;
  margin-left: 50px;
  left: 60%;
+ top: 200px;
 }
 nav#toc h1 {
  margin: 0;
  padding: 0;
  font-size: 100%;
  text-transform: none;
- background-color: rgb(69,134,84);
 }
-nav#toc h1 a { color: rgb(234,234,234) }
+nav#toc h1 a { color: rgb(234,234,234); background-color: rgb(69,134,84); }
 nav#toc h1, nav#toc a { border-bottom: 1px solid rgb(224,224,224) }
 nav#toc a {
+ background-color: white;
  display: block;
  padding: .5em .8em;
+ color: rgba(68,68,68,.8)
 }
-nav#toc a { color: rgba(68,68,68,.8) }
 nav#toc a:last-child { border: 0 }
 nav#toc a.current { background-color: rgb(120,161,108); color: white; }
 nav#toc a.level3, nav#toc a.level4, nav#toc a.level5, nav#toc a.level6 {
@@ -96,7 +97,7 @@ a:hover { color: rgb(69,134,84) }
 
 h1, h2, h3 { color: rgb(69,134,84); line-height: 120%; }
 h1, h2 { text-transform: uppercase }
-h1 { margin-top: 2em }
+h1 { margin: 0; padding-top: 200px; }
 h2 { margin-top: 2.6em }
 h3 { margin-top: 1.8em }
 
