--- a/docs_source_files/layouts/shortcodes/ghcontributors.html
+++ b/docs_source_files/layouts/shortcodes/ghcontributors.html
@@ -20,4 +20,26 @@
     padding-left: 4px;
   }
 </style>
-<div class="ghContributors"></div>
+<div class="ghContributors">
+  {{ $url := .Get 0 }}
+  {{ $githubToken := (getenv "SELENIUM_CI_TOKEN") }}
+  {{ $toReplace := printf "://%s@" $githubToken }}
+  {{ $tokenInUrl :=cond (eq $githubToken "") "://" $toReplace }}
+  {{ $url := replace $url "://" $tokenInUrl }}
+
+  {{ range getJSON $url }}
+  <div style="padding: 10px;">
+    <img
+      src="{{.avatar_url}}"
+      class="inline"
+      width="32"
+      height="32"
+      style="height: 32px;height: 32px;margin-bottom:.25em; vertical-align:middle; "
+    />
+    <label
+      ><a href="{{.html_url}}">@{{.login}}</a></label
+    >
+    <span class="contributions">{{.contributions}} commits</span>
+  </div>
+  {{ end }}
+</div>
